# SmartHomeProject

./: CMakeLists.txt  README.md
